[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "building_blocks_sai_ak"
version = "0.1.0"
description = "A sample Python project in the ak subdirectory"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
dependencies = [
    # List your project dependencies here
    "requests",  # Example dependency
]
